<resources>
    <string name="app_name"><b><center>All Food Receipes</center></b></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_Videos">Videos</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_rate">Rate</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_fav">Favouites</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_send">Send</string>
    <string name="nasta">Nasta Receipes</string>
    <string name="Paratha">Paratha Receipes</string>
    <string name="Chatni">Chatni Receipes</string>
    <string name="Aachar">Aachar Receipes </string>
    <string name="Salad">Salad Receipes</string>
    <string name="roti">Roti Receipes</string>
    <string name="sabzi">Sabzi Receipes </string>
    <string name="sambhar">Sambhar Receipes</string>
    <string name="mithai">Mithai Receipes</string>
    <string name="festival">Festival Food Receipes</string>
    <string name="nonvg">Non Veg Receipes</string>
    <string name="punj">Punjabi Food Receipes</string>
    <string name="south">South Indian Receipes</string>
    <string name="soup">Soup Receipes</string>
    <string name="guj">Gujarati Food Receipes</string>
    <string name="beng">Bengali Food Receipes</string>
    <string name="biryani">Biryani Receipes</string>
    <string name="child">Children Food Receipes</string>
    <string name="sharbat">Sharbat Receipes</string>
    <string name="fast">Fast Food Receipes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
